# lidluren

./: Cargo.toml  README.md  http.http  schema.sql
backend/: http.http
backend/src/entities/: lidluren.rs
lidluren/: app.json  package-lock.json  package.json
lidluren/app/: App.tsx  index.tsx
src/: main.rs
src/entities/: mod.rs  prelude.rs
