[package]
name = "lidluren"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.14.0"
chrono = { version = "0.4.45", features = ["serde"] }
env_logger = "0.11.11"
load-dotenv = "0.1.2"
sea-orm = {version = "1.1.20", features=["sqlx-mysql", 'macros', "runtime-tokio-native-tls"]}
serde = {version = "1.0.229", features = ["derive"]}
serde_json = "1.0.150"
